Fix vertical alignment, move must-see and follow-up tags to the right of the headline.

--- a/scss/partials/_stream_collapsed_item.scss
+++ b/scss/partials/_stream_collapsed_item.scss
@@ -100,12 +100,7 @@ div.stream-collapsed-item {
       flex: 0 1 auto;
       display: flex;
       flex-direction: row;
-      /* flex-wrap: nowrap; */
-      /* justify-content: flex-start; */
-      /* align-content: flex-start; */
-      /* align-items: center; */
       margin-left: 8px;
-      /* vertical-align: top; */
       overflow: hidden;
       text-overflow: ellipsis;
 
@@ -116,7 +111,6 @@ div.stream-collapsed-item {
         white-space: nowrap;
         @include activity-title(14px, 24px);
         flex: 0 0 auto;
-        margin-left: 8px;
       }
 
       @include must-see-tag();
@@ -128,7 +122,7 @@ div.stream-collapsed-item {
       }
 
       div.follow-up-tag, div.must-see-tag {
-        margin: 4px 0 0 0;
+        margin: 4px 0 0 8px;
         flex: 0 0 auto;
       }
 
